2007-05-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/TermDocMatrix.Rd: Fixed documentation on Data slot.

2007-05-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (textvector): Small fix for dealing with empty
	vectors. Thanks to Ariel Maguyon for his error report.
	(removeSparseTerms): New function to remove columns from a
	term-document matrix exceeding a sparse factor.

2007-05-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/tmUpdate.Rd: Corrected documentation on readerControl parameter.

2007-05-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/sFilter.Rd: Corrected documentation on statement format (use
	'==' instead of '=').

2007-05-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/aobjects.R (StructuredTextDocument): Inherits from
	TextDocument.

2007-05-04  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (findFreqTerms): Perform efficient computation
	on sparse matrices as proposed by Martin Maechler.

2007-04-27  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Removed \code{dbDisconnect} calls since last
	\pkg{filehash} version makes them deprecated.

2007-04-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (textvector): Stemming is now performed before
	erasing stopwords.
	(weightMatrix): Adapted to handle sparse matrices.
	(TermDocMatrix): Sparse matrix is now efficiently built by
	direct stepwise insertion of row values into it.

2007-04-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* DESCRIPTION: Replaced \pkg{filehashSQLite} with \pkg{filehash}
	due to ongoing problems. For our purposes the latter is as useful
	as the replaced package.

2007-04-20  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/TextDocCol.Rd: Replaced \code{readPlain} with \code{object@DefaultReader}.

	* man/TermDocMatrix.Rd: Remove deprecated \code{language} argument.

2007-04-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/resolve.R (resolveISOCode): Added ISO 639-1 codes for