@@ -80,6 +80,7 @@ exportMethods(
               "tmTolower",
               "stemDoc",
               "removeWords",
+              "replaceWords",
               "tmFilter",
               "tmIndex",
               "searchFullText",
